permaSTAR rating issue needs fixed

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -50,8 +50,18 @@ padding: 1em;
     top: 6px;
 }
 
+.backButton {
+    position: absolute:
+    right:  10px;
+}
+
+
 header {
     padding: 6px;
+}
+
+.fa-star {
+    color: gold;
 }
 
 .info-boxes {
