--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -46,18 +46,23 @@ padding: 1em;
 
 .navLogo {
     height: 50px;
-    position:  relative;
-    top: 6px;
+    width: 100px;
+    position:  absolute;
+    top: 8px;
+    left: 10px
 }
 
-.backButton {
+.enjoy-css {
     position: absolute;
     right:  10px;
+    top: 12px
 }
 
 
 header {
+    display: flex;
     padding: 6px;
+    justify-content: space-around;
 }
 
 .fa-star {
@@ -117,20 +122,20 @@ header {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    width: 250px;
-    height: 70px;
+    width: 80px;
+    height: 35px;
     cursor: pointer;
     margin: 0 auto;
-    border: 2px solid rgb(30,205,151);
+    border: 2.5px solid rgb(30,205,151);
     -webkit-border-radius: 40px;
     border-radius: 40px;
-    font: normal 37px/70px "Advent Pro", Helvetica, sans-serif;
+    font: bold 20px "Advent Pro", Helvetica, sans-serif;
     color: rgb(30, 205, 151);
     text-align: center;
     -o-text-overflow: clip;
     text-overflow: clip;
     letter-spacing: 1px;
-    background: rgba(0,0,0,0);
+    background: rgb(255, 255, 255);
     -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
     -moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
     -o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
