--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -2,6 +2,8 @@ body {
 background-image: url('../images/surfAppBackground.jpg');
 background-size: cover;
 margin: 0;
+min-height: 100vh;
+background-repeat: no-repeat;
 }
 
 h1,h2 {
@@ -52,38 +54,62 @@ padding: 1em;
     left: 10px
 }
 
-.enjoy-css {
-    position: absolute;
-    right:  10px;
-    top: 12px
+.right {
+    float: right;
 }
 
+.left {
+    float: left;
+}
+
+.margin-top-x1 {
+    margin-top: 10px;
+}
 
 header {
-    display: flex;
     padding: 6px;
     justify-content: space-around;
 }
 
-.fa-star {
+.underline {
+    text-decoration: underline;
+}
+
+fieldset {
+    border: none;
+}
+
+.fa-star, .fa-star-half {
     color: gold;
 }
 
 .info-boxes {
     display: flex;
     justify-content: space-evenly;
-    /* align-items: flex-end; */
+    flex-direction: column;
+    padding: 0;
 }
+
 
 .info-boxes > li {
     display: inline-block;
     height: 140px;
-    width: 100px;
+    width: 100%;
     border: 1.3px solid #017d98;
     border-radius: 25px;
     list-style-type: none;
-    padding: 10px;
+    padding-top: 20px;
+    margin-bottom: 20px; 
     
+}
+
+@media screen and (min-width: 768px) {
+    .info-boxes {
+       flex-direction:  row;
+    }
+    .info-boxes > li {
+        width: 100px;
+    }
 }
 
 .info-boxes > div {
@@ -112,12 +138,6 @@ header {
     align-items: center;
 }
 
-@media screen and (min-width: 768px)    {
-    .container {
-        max-width: 740px;
-    }
-}
-
 .enjoy-css {
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
@@ -125,12 +145,11 @@ header {
     width: 80px;
     height: 35px;
     cursor: pointer;
-    margin: 0 auto;
-    border: 2.5px solid rgb(30,205,151);
+    border: 2.5px solid rgb(18, 63, 187);
     -webkit-border-radius: 40px;
     border-radius: 40px;
     font: bold 20px "Advent Pro", Helvetica, sans-serif;
-    color: rgb(30, 205, 151);
+    color: rgb(18, 63, 187);
     text-align: center;
     -o-text-overflow: clip;
     text-overflow: clip;
@@ -144,16 +163,28 @@ header {
   
   .enjoy-css:hover {
     color: rgba(255,255,255,1);
-    background: rgb(30, 205, 151);
+    background: rgb(18, 63, 187);
   }
   
   .enjoy-css:active {
-    border: 2px solid rgba(33,224,163,1);
-    background: rgba(33,224,163,1);
+    border: 2px solid rgba(18, 63, 187,1);
+    background: rgba(18, 63, 187,1);
     -webkit-transition: none;
     -moz-transition: none;
     -o-transition: none;
     transition: none;
   }
+
+  .go-button {
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px)    {
+    .container {
+        max-width: 740px;
+    }
+}
+
+
 
 /* #FFFFFF | #222222 | #565656 | #E5EBEB | #1549D7 */
