--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -103,14 +103,30 @@ fieldset {
     
 }
 
-@media screen and (min-width: 768px) {
-    .info-boxes {
-       flex-direction:  row;
-    }
-    .info-boxes > li {
-        width: 100px;
-    }
-}
+.loading {
+    display: none;
+    position: fixed;
+    z-index: 1051;
+    height: 2em;
+    width: 2em;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+  
+  /* Transparent Overlay */
+  .loading:before {
+    content: '';
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 
 .info-boxes > div {
     /* display: flex; */
@@ -180,12 +196,17 @@ fieldset {
     margin: 0 auto;
 }
 
-@media screen and (min-width: 768px)    {
+@media screen and (min-width: 768px) {
+    .info-boxes {
+       flex-direction:  row;
+    }
+    .info-boxes > li {
+        width: 100px;
+    }
     .container {
         max-width: 740px;
     }
 }
-
 
 
 /* #FFFFFF | #222222 | #565656 | #E5EBEB | #1549D7 */
